tests/snapshots/test_inspect__borrow_scope_simple.snap
---
source: bin/kobo-cli/tests/test_run.rs
expression: output.stdout
---
fn main() {
// kobo: x @ line 2 -> plain (local-only non-Copy binding)
    let mut x = vec![1];
    let mut r = &mut x;
    r.push(2);
    println!("{}", x.len());
}
