tests/snapshots/test_inspect__conditional_mutation.snap
---
source: bin/kobo-cli/tests/test_run.rs
expression: output.stdout
---
fn mutate<T>(_value: &mut T) {}
fn main() {
// kobo: x @ line 4 -> plain (local-only non-Copy binding)
    let mut x = String::from("kobo");
    if true {
        mutate(&mut x);
    }
    println!("{}", x.len());
}
