tests/snapshots/test_inspect__dead_borrow_move.snap
---
source: bin/kobo-cli/tests/test_run.rs
expression: dead_output.stdout.clone()
---
fn main() {
// kobo: x @ line 2 -> plain (dead original after assignment)
    let x = String::from("hello");
    let y = &x;
// kobo: z @ line 4 -> plain (local-only non-Copy binding)
    let z = x;
    println!("{}", z.len());
}
