tests/snapshots/test_inspect__generic_equiv.snap
---
source: bin/kobo-cli/tests/test_run.rs
assertion_line: 431
expression: output.stdout
---
use std::cell::RefCell;
use std::rc::Rc;
// kobo: _value @ line 1 -> plain (local-only non-Copy binding)
fn use_mut<T>(_value: &mut T) {}
// kobo: value @ line 3 -> rc_refcell (generic T: Copy unknown)
fn first<T>(mut value: Rc<RefCell<T>>) {
    use_mut(&mut *value.borrow_mut());
}
// kobo: value @ line 7 -> rc_refcell (generic T: Copy unknown)
fn second<U>(mut value: Rc<RefCell<U>>) {
    use_mut(&mut *value.borrow_mut());
}
fn main() {
    first(Rc::new(RefCell::new(String::from("a"))));
    second(Rc::new(RefCell::new(String::from("b"))));
}
