tests/snapshots/test_inspect__generic_shared.snap
---
source: bin/kobo-cli/tests/test_run.rs
expression: output.stdout
---
use std::cell::RefCell;
use std::rc::Rc;
fn use_mut<T>(_value: &mut T) {}
// kobo: value @ line 3 -> rc_refcell (generic T: Copy unknown)
fn touch_twice<T>(mut value: Rc<RefCell<T>>) {
    use_mut(&mut *value.borrow_mut());
    use_mut(&mut *value.borrow_mut());
}
fn main() {
    touch_twice(Rc::new(RefCell::new(String::from("kobo"))));
}
