tests/snapshots/test_inspect__impl_basic.snap
---
source: bin/kobo-cli/tests/test_run.rs
expression: output.stdout
---
struct Counter {
    value: i32,
    name: String,
}
impl Counter {
// kobo: name @ line 7 -> plain (moved then dead (freeze-and-rotate))
    fn new(name: String) -> Self {
        Counter { value: 0, name }
    }
    fn get_name(&self) -> &str {
        &self.name
    }
    fn increment(&mut self) {
        self.value += 1;
    }
    fn value(&self) -> i32 {
        self.value
    }
}
fn main() {
// kobo: c @ line 25 -> plain (local-only non-Copy binding)
    let c = Counter::new("test".to_string());
    println!("{}: {}", c.get_name(), c.value());
}
